[Web Animations] changing the effect of a transition should no longer have it marked as running https://bugs.webkit.org/show_bug.cgi?id=234823

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

Mark WPT progression.

* web-platform-tests/css/css-transitions/CSSTransition-effect.tentative-expected.txt:

Source/WebCore:

* animation/DeclarativeAnimation.cpp:
(WebCore::DeclarativeAnimation::setEffect):
* animation/DeclarativeAnimation.h:
* animation/WebAnimation.h:


Canonical link: https://commits.webkit.org/245685@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287550 268f45cc-cd09-0410-ab3c-d52691b4dbfc